# Netflix-API

./: README.md  docker-compose.yml  pyproject.toml
netflix/: settings.py  urls.py
netflix_api/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
netflix_api/migrations/: 0001_initial.py  0002_auto_20200928_1914.py
